@@ -5,6 +5,8 @@ Changelog
 0.2.9 (unreleased)
 ==================
 
+- Avoid accidentally creating incorrect directories in developer VFS mapping.
+
 - Switch testrunner to pytest. Refactor some tests to take advantage of its
   capabilities.
 
